--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>PokeInfo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -12,10 +12,10 @@
     <h1>PokeInfo</h1>
     <div id="search-container">
         <div id="search-input-container">
-            <input type="text" id="pokemonName" placeholder="Nom du Pokémon">
+            <input type="text" id="pokemonName" placeholder="Search Pokemon">
         </div>
         <div id="search-button-container">
-            <button id="searchButton">Rechercher</button>
+            <button id="searchButton">Search</button>
         </div>
     </div>
     <div id="pokemonInfo"></div>
@@ -24,8 +24,8 @@
     <div id="modal-container" class="modal-container">
         <div class="modal-content" id="modal-content"></div>
     </div>
-    
-    <script src="main.js"></script>
+
+    <script src="./main.js"></script>
 
 </body>
 </html>
