--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="modal-content" id="modal-content"></div>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
